--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@ ul {list-style:none;}
 h1,h2,h3 {margin-bottom:15px;}
 
 /* Header */
-header {display:flex; justify-content:space-between; align-items:center; padding:20px 50px; background:#111; position:sticky; top:0; z-index:100;}
+header {display:flex; justify-content:space-between; align-items:center; padding:20px 50px; background:#111; position:sticky; top:0; z-index:100; transition: box-shadow 0.3s;}
+header.scrolled {box-shadow:0 5px 15px rgba(0,0,0,0.5);}
 header .logo {font-size:1.8rem; color:#00f7ff; font-weight:700;}
 header nav ul {display:flex; gap:25px;}
 header nav ul li a {color:#f0f0f0; transition: color 0.3s;}
@@ -24,6 +25,14 @@ header nav ul li a:hover {color:#00f7ff;}
 
 /* Hero */
 .hero {text-align:center; padding:120px 20px 60px 20px; position:relative;}
+.hero::before {
+  content:"";
+  position:absolute;
+  top:0; left:0; width:100%; height:100%;
+  background:radial-gradient(circle, rgba(0,247,255,0.05) 1px, transparent 1px);
+  background-size:20px 20px;
+  z-index:0;
+}
 .gradient-text {font-size:3rem; font-weight:800; background:linear-gradient(270deg,#00f7ff,#00d0ff,#00f7ff); background-size:600% 600%; -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation: gradientAnimation 8s ease infinite;}
 @keyframes gradientAnimation {0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
 .typewriter {display:inline-block; overflow:hidden; border-right:.15em solid #00f7ff; white-space:nowrap; letter-spacing:.05em; animation:typing 3s steps(40,end), blink-caret .75s step-end infinite;}
@@ -31,7 +40,7 @@ header nav ul li a:hover {color:#00f7ff;}
 @keyframes blink-caret {0%,100%{border-color:transparent;}50%{border-color:#00f7ff;}}
 .hero-buttons a {margin:0 10px; padding:12px 25px; border-radius:25px; font-weight:600; display:inline-block; transition:transform 0.3s, box-shadow 0.3s;}
 .btn-primary {background:linear-gradient(90deg,#00f7ff,#00d0ff); color:#0d0d0d;}
-.btn-primary:hover {transform:scale(1.05); box-shadow:0 0 15px #00f7ff;}
+.btn-primary:hover {transform:scale(1.05); box-shadow:0 0 25px #00f7ff, 0 0 50px #00d0ff;}
 .btn-outline {border:2px solid #00f7ff; color:#00f7ff; background:transparent;}
 .btn-outline:hover {transform:scale(1.05); background:#00f7ff; color:#0d0d0d;}
 .pulse {animation:pulseAnim 2s infinite;}
@@ -47,17 +56,13 @@ header nav ul li a:hover {color:#00f7ff;}
 .card p {font-size:1rem; margin-bottom:15px;}
 .card .btn {display:inline-block; padding:8px 18px; margin:5px 5px 0 5px; border-radius:8px; cursor:pointer; transition:all 0.3s;}
 
-/* Tooltip */
-.tooltip {position:absolute; top:-10px; left:50%; transform:translateX(-50%) translateY(-100%); background:#00f7ff; color:#0d0d0d; padding:10px; border-radius:10px; font-size:0.9rem; width:220px; text-align:center; opacity:0; pointer-events:none; transition:opacity 0.3s; z-index:10;}
-.tooltip.show {opacity:1; pointer-events:auto;}
-
 /* Modal */
 .modal {display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.85); justify-content:center; align-items:center; z-index:100;}
 .modal.show {display:flex;}
-.modal-content {background:#111; padding:30px; border-radius:15px; max-width:500px; width:90%; text-align:center; transform:scale(0.8); opacity:0; transition: transform 0.3s, opacity 0.3s;}
+.modal-content {background:#111; padding:30px; border-radius:15px; max-width:550px; width:90%; text-align:center; transform:scale(0.8); opacity:0; transition: transform 0.3s, opacity 0.3s;}
 .modal.show .modal-content {transform:scale(1); opacity:1;}
 .modal-content h3 {color:#00f7ff; margin-bottom:15px;}
-.modal-content p {margin-bottom:20px;}
+.modal-content p {margin-bottom:20px; text-align:left;}
 .modal .close-btn {position:absolute; top:10px; right:15px; font-size:1.5rem; cursor:pointer; color:#00f7ff; transition:color 0.3s;}
 .modal .close-btn:hover {color:#00d0ff;}
 
@@ -100,17 +105,36 @@ footer h3 {margin-bottom:10px;}
 <section class="services" id="services">
   <h2>Serviços DR9.AI</h2>
   <div class="cards-grid">
-    <div class="card" data-description="Controle total, segurança avançada e relatórios detalhados.">
+    <!-- DM para Licenças Exclusivas -->
+    <div class="card" data-description="📦 DM para Licenças Exclusivas
+• Android Multi Tool — Ferramentas para manutenção e reparos em dispositivos Android.
+• Global Unlocker Pro — Unlock e reparo de IMEI/assinaturas.
+• Chimera Tool — Soluções avançadas de desbloqueio e reparo.
+• Griffin Unlocker — Unlocks e recursos avançados para modelos recentes.
+• Borneo Schematics — Esquemas e recursos técnicos para reparos.
+Ideal para técnicos, revendedores e equipes de suporte que precisam de agilidade e confiabilidade.">
       <i class="fas fa-key"></i>
       <h3>DM para Licenças Exclusivas</h3>
       <a class="btn btn-outline know-more">Saiba Mais</a>
     </div>
-    <div class="card" data-description="Automação personalizada para aumentar produtividade e otimizar processos.">
+
+    <!-- IA e Automação para Empreendedores -->
+    <div class="card" data-description="🤖 Bots inteligentes que atendem clientes 24/7.
+• Processos automatizados que economizam tempo e recursos.
+• Análise de dados poderosa para decisões estratégicas.
+• Fácil de implementar, mesmo sem experiência técnica.">
       <i class="fas fa-robot"></i>
       <h3>IA e Automação para Empreendedores</h3>
       <a class="btn btn-outline know-more">Saiba Mais</a>
     </div>
-    <div class="card" data-description="Interface intuitiva, suporte completo e integração simplificada.">
+
+    <!-- Licenças Digitais Fáceis de Usar -->
+    <div class="card" data-description="💻 Licenças Digitais Fáceis de Usar
+• Adobe Creative Cloud – Photoshop, Illustrator, Premiere, After Effects e mais.
+• CorelDRAW Graphics Suite – Design gráfico, vetores e layout profissional.
+• Microsoft 365 – Word, Excel, PowerPoint, Outlook e ferramentas de produtividade.
+• Canva Pro – Design fácil e rápido para redes sociais, marketing e apresentações.
+Ideal para designers, empreendedores e profissionais que buscam eficiência e produtividade.">
       <i class="fas fa-cogs"></i>
       <h3>Licenças Digitais Fáceis de Usar</h3>
       <a class="btn btn-outline know-more">Saiba Mais</a>
@@ -118,11 +142,13 @@ footer h3 {margin-bottom:10px;}
   </div>
 </section>
 
+<!-- Modal -->
 <div class="modal" id="modal">
   <div class="modal-content">
-    <span class="close-btn" id="closeModal">&times;</span>
+    <span class="close-btn" id="closeModal" aria-label="Fechar">&times;</span>
     <h3 id="modalTitle"></h3>
     <p id="modalDesc"></p>
+    <div id="modalActions" style="margin-top:18px;"></div>
   </div>
 </div>
 
@@ -146,26 +172,52 @@ footer h3 {margin-bottom:10px;}
   <p>&copy; 2025 DR9.AI - Todos os direitos reservados.</p>
 </footer>
 
+<!-- Scripts -->
 <script>
 const modal = document.getElementById('modal');
 const modalTitle = document.getElementById('modalTitle');
 const modalDesc = document.getElementById('modalDesc');
+const modalActions = document.getElementById('modalActions');
 const closeModalBtn = document.getElementById('closeModal');
+
+function makeContactButtons(titleText) {
+  const message = encodeURIComponent(`Olá! Gostaria de informações sobre: ${titleText}`);
+  const waLink = `https://wa.me/?text=${message}`;
+  const tgLink = `https://t.me/share/url?url=&text=${message}`;
+
+  return `
+    <a href="${waLink}" target="_blank" rel="noopener noreferrer" class="btn btn-primary" style="margin-right:10px;">
+      <i class="fab fa-whatsapp"></i> Solicitar via WhatsApp
+    </a>
+    <a href="${tgLink}" target="_blank" rel="noopener noreferrer" class="btn btn-outline">
+      <i class="fab fa-telegram"></i> Solicitar via Telegram
+    </a>
+  `;
+}
 
 document.querySelectorAll('.know-more').forEach(button => {
   button.addEventListener('click', () => {
     const card = button.closest('.card');
-    modalTitle.textContent = card.querySelector('h3').textContent;
-    modalDesc.textContent = card.getAttribute('data-description');
+    const title = card.querySelector('h3').textContent || 'Serviço DR9.AI';
+    const raw = card.getAttribute('data-description') || '';
+    modalTitle.textContent = title;
+    modalDesc.innerHTML = raw.replace(/\n/g, '<br>');
+    modalActions.innerHTML = makeContactButtons(title);
     modal.classList.add('show');
   });
 });
 
-closeModalBtn.addEventListener('click', () => { modal.classList.remove('show'); });
+closeModalBtn.addEventListener('click', () => modal.classList.remove('show'));
+window.addEventListener('click', (e) => { if(e.target == modal) modal.classList.remove('show'); });
+window.addEventListener('keydown', (e) => { if(e.key === 'Escape') modal.classList.remove('show'); });
 
-window.addEventListener('click', (e) => {
-  if(e.target == modal) modal.classList.remove('show');
+// Header shadow on scroll
+window.addEventListener('scroll', () => {
+  const header = document.querySelector('header');
+  if(window.scrollY > 50) header.classList.add('scrolled');
+  else header.classList.remove('scrolled');
 });
 </script>
+
 </body>
 </html>
