--- a/index.html
+++ b/index.html
@@ -103,8 +103,19 @@ footer h3 {margin-bottom:10px;}
 </section>
 
 <section class="services" id="services">
+ <section class="services" id="services">
   <h2>Serviços DR9.AI</h2>
   <div class="cards-grid">
+    <!-- IA e Automação para Empreendedores -->
+    <div class="card" data-description="🤖 Bots inteligentes que atendem clientes 24/7.
+• Processos automatizados que economizam tempo e recursos.
+• Análise de dados poderosa para decisões estratégicas.
+• Fácil de implementar, mesmo sem experiência técnica.">
+      <i class="fas fa-robot"></i>
+      <h3>IA e Automação para Empreendedores</h3>
+      <a class="btn btn-outline know-more">Saiba Mais</a>
+    </div>
+
     <!-- DM para Licenças Exclusivas -->
     <div class="card" data-description="📦 DM para Licenças Exclusivas
 • Android Multi Tool — Ferramentas para manutenção e reparos em dispositivos Android.
@@ -115,16 +126,6 @@ footer h3 {margin-bottom:10px;}
 Ideal para técnicos, revendedores e equipes de suporte que precisam de agilidade e confiabilidade.">
       <i class="fas fa-key"></i>
       <h3>DM para Licenças Exclusivas</h3>
-      <a class="btn btn-outline know-more">Saiba Mais</a>
-    </div>
-
-    <!-- IA e Automação para Empreendedores -->
-    <div class="card" data-description="🤖 Bots inteligentes que atendem clientes 24/7.
-• Processos automatizados que economizam tempo e recursos.
-• Análise de dados poderosa para decisões estratégicas.
-• Fácil de implementar, mesmo sem experiência técnica.">
-      <i class="fas fa-robot"></i>
-      <h3>IA e Automação para Empreendedores</h3>
       <a class="btn btn-outline know-more">Saiba Mais</a>
     </div>
 
