--- a/index.html
+++ b/index.html
@@ -15,44 +15,45 @@ a {text-decoration:none; color:inherit;}
 ul {list-style:none;}
 h1,h2,h3 {margin-bottom:15px;}
 
+/* Gradientes principais */
+:root {
+  --gradient-primary: linear-gradient(135deg,#00f7ff,#9b59ff);
+  --gradient-glow: #00f7ff, #9b59ff;
+}
+
 /* Header */
 header {display:flex; justify-content:space-between; align-items:center; padding:20px 50px; background:#111; position:sticky; top:0; z-index:100; transition: box-shadow 0.3s;}
 header.scrolled {box-shadow:0 5px 15px rgba(0,0,0,0.5);}
-header .logo {font-size:1.8rem; color:#00f7ff; font-weight:700;}
+header .logo {font-size:1.8rem; font-weight:700; background: var(--gradient-primary); -webkit-background-clip:text; -webkit-text-fill-color:transparent;}
 header nav ul {display:flex; gap:25px;}
 header nav ul li a {color:#f0f0f0; transition: color 0.3s;}
-header nav ul li a:hover {color:#00f7ff;}
+header nav ul li a:hover {color:#9b59ff;}
 
 /* Hero */
 .hero {text-align:center; padding:140px 20px 80px 20px; position:relative; overflow:hidden;}
-.hero::before {
-  content:""; position:absolute; top:0; left:0; width:100%; height:100%;
-  background: radial-gradient(circle, rgba(0,247,255,0.08) 1px, transparent 1px);
-  background-size:20px 20px; z-index:0;
-}
 .hero-canvas {position:absolute; top:0; left:0; width:100%; height:100%; z-index:0;}
 .hero-content {position:relative; z-index:1;}
-.gradient-text {font-size:3rem; font-weight:800; background:linear-gradient(270deg,#00f7ff,#00d0ff,#00f7ff); background-size:600% 600%; -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation: gradientAnimation 8s ease infinite;}
+.gradient-text {font-size:3rem; font-weight:800; background: var(--gradient-primary); background-size:200% 200%; -webkit-background-clip:text; -webkit-text-fill-color:transparent; animation: gradientAnimation 6s ease infinite;}
 @keyframes gradientAnimation {0%{background-position:0% 50%;}50%{background-position:100% 50%;}100%{background-position:0% 50%;}}
 .typewriter {display:inline-block; overflow:hidden; border-right:.15em solid #00f7ff; white-space:nowrap; letter-spacing:.05em; animation:typing 3s steps(40,end), blink-caret .75s step-end infinite;}
 @keyframes typing {from{width:0;}to{width:100%;}}
 @keyframes blink-caret {0%,100%{border-color:transparent;}50%{border-color:#00f7ff;}}
 .hero-buttons a {margin:0 10px; padding:12px 25px; border-radius:25px; font-weight:600; display:inline-block; transition:transform 0.3s, box-shadow 0.3s;}
-.btn-primary {background:linear-gradient(90deg,#00f7ff,#00d0ff); color:#0d0d0d;}
-.btn-primary:hover {transform:scale(1.05); box-shadow:0 0 25px #00f7ff, 0 0 50px #00d0ff;}
+.btn-primary {background: var(--gradient-primary); color:#0d0d0d;}
+.btn-primary:hover {transform:scale(1.05); box-shadow:0 0 20px #00f7ff, 0 0 40px #9b59ff;}
 .btn-outline {border:2px solid #00f7ff; color:#00f7ff; background:transparent;}
-.btn-outline:hover {transform:scale(1.05); background:#00f7ff; color:#0d0d0d;}
+.btn-outline:hover {transform:scale(1.05); background:var(--gradient-primary); color:#0d0d0d;}
 .pulse {animation:pulseAnim 2s infinite;}
 @keyframes pulseAnim {0%{transform:scale(1); box-shadow:0 0 0 rgba(0,247,255,0.7);}50%{transform:scale(1.05); box-shadow:0 0 20px rgba(0,247,255,0.7);}100%{transform:scale(1); box-shadow:0 0 0 rgba(0,247,255,0.7);}}
-.badge {display:inline-block; margin-top:20px; background:linear-gradient(90deg,#00f7ff,#00d0ff); color:#0d0d0d; padding:6px 16px; border-radius:20px; font-weight:bold; text-transform:uppercase; letter-spacing:1px;}
+.badge {display:inline-block; margin-top:20px; background: var(--gradient-primary); color:#0d0d0d; padding:6px 16px; border-radius:20px; font-weight:bold; text-transform:uppercase; letter-spacing:1px;}
 
 /* Cards Grid */
 .cards-grid {display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:25px; max-width:1200px; margin:50px auto;}
-.card {background:#1a1a1a; border-radius:15px; padding:30px 20px; text-align:center; position:relative; transition: transform 0.3s, box-shadow 0.3s, border 0.3s; transform-style: preserve-3d; perspective: 1000px; opacity:0; transform: translateY(40px);}
+.card {background:#1a1a1a; border-radius:15px; padding:30px 20px; text-align:center; position:relative; transition: transform 0.3s, box-shadow 0.3s; transform-style: preserve-3d; perspective: 1000px; opacity:0; transform: translateY(40px); box-shadow:0 10px 30px rgba(0,247,255,0.2),0 0 20px rgba(155,89,255,0.2);}
 .card.visible {opacity:1; transform:translateY(0);}
-.card:hover {transform: rotateY(var(--rotateY,0deg)) rotateX(var(--rotateX,0deg)) scale(1.05); box-shadow:0 20px 40px rgba(0,247,255,0.6); border:1px solid #00f7ff;}
+.card:hover {transform: rotateY(var(--rotateY,0deg)) rotateX(var(--rotateX,0deg)) scale(1.05); box-shadow:0 20px 40px rgba(0,247,255,0.6),0 0 25px rgba(155,89,255,0.6);}
 .card i {font-size:2.5rem; color:#00f7ff; margin-bottom:15px; transition: transform 0.3s;}
-.card h3 {color:#00f7ff; font-size:1.4rem; margin-bottom:10px;}
+.card h3 {color: #9b59ff; font-size:1.4rem; margin-bottom:10px;}
 .card p {font-size:1rem; margin-bottom:15px;}
 .card .btn {display:inline-block; padding:8px 18px; margin:5px 5px 0 5px; border-radius:8px; cursor:pointer; transition:all 0.3s;}
 
@@ -64,7 +65,7 @@ header nav ul li a:hover {color:#00f7ff;}
 .modal-content h3 {color:#00f7ff; margin-bottom:15px;}
 .modal-content p {margin-bottom:20px; text-align:left;}
 .modal .close-btn {position:absolute; top:10px; right:15px; font-size:1.5rem; cursor:pointer; color:#00f7ff; transition:color 0.3s;}
-.modal .close-btn:hover {color:#00d0ff;}
+.modal .close-btn:hover {color:#9b59ff;}
 
 /* CTA Section */
 .cta {text-align:center; padding:100px 20px; background:#111; border-top:1px solid #222;}
@@ -72,7 +73,7 @@ header nav ul li a:hover {color:#00f7ff;}
 /* Footer */
 footer {text-align:center; padding:30px 10px; background:#111; color:#aaa;}
 footer a {color:#00f7ff; margin:0 8px; transition: transform 0.3s;}
-footer a:hover {transform:scale(1.2); color:#00d0ff;}
+footer a:hover {transform:scale(1.2); color:#9b59ff;}
 footer h3 {margin-bottom:10px;}
 
 /* Responsivo */
@@ -193,16 +194,52 @@ window.addEventListener('scroll',()=>{
   else header.classList.remove('scrolled');
 });
 
-// Hero particles
+// Hero particles interativas com linhas
 const canvas=document.getElementById('heroCanvas');
 const ctx=canvas.getContext('2d');
 canvas.width=window.innerWidth;
 canvas.height=window.innerHeight;
 let particles=[];
-for(let i=0;i<120;i++){particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5})}
-function animate(){ctx.clearRect(0,0,canvas.width,canvas.height);particles.forEach(p=>{ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fillStyle='rgba(0,247,255,0.3)';ctx.fill();p.x+=p.dx;p.y+=p.dy;if(p.x>canvas.width)p.x=0;if(p.x<0)p.x=canvas.width;if(p.y>canvas.height)p.y=0;if(p.y<0)p.y=canvas.height;});requestAnimationFrame(animate);}
-animate();
-window.addEventListener('resize',()=>{canvas.width=window.innerWidth;canvas.height=window.innerHeight;});
+const particleCount=120;
+for(let i=0;i<particleCount;i++){
+  particles.push({x:Math.random()*canvas.width,y:Math.random()*canvas.height,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5});
+}
+function drawParticles(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  for(let i=0;i<particles.length;i++){
+    const p=particles[i];
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fillStyle='rgba(0,247,255,0.4)';
+    ctx.fill();
+    // Linhas entre partículas próximas
+    for(let j=i+1;j<particles.length;j++){
+      const p2=particles[j];
+      const dist=Math.hypot(p.x-p2.x,p.y-p2.y);
+      if(dist<100){
+        ctx.beginPath();
+        ctx.moveTo(p.x,p.y);
+        ctx.lineTo(p2.x,p2.y);
+        ctx.strokeStyle='rgba(155,89,255,'+(1-dist/100)*0.3+')';
+        ctx.lineWidth=1;
+        ctx.stroke();
+      }
+    }
+    p.x+=p.dx;
+    p.y+=p.dy;
+    if(p.x>canvas.width)p.x=0;
+    if(p.x<0)p.x=canvas.width
+        if(p.y>canvas.height)p.y=0;
+    if(p.y<0)p.y=canvas.height;
+  }
+  requestAnimationFrame(drawParticles);
+}
+drawParticles();
+
+window.addEventListener('resize', ()=>{
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+});
 
 // Cards tilt 3D effect
 document.querySelectorAll('.card').forEach(card=>{
@@ -210,15 +247,18 @@ document.querySelectorAll('.card').forEach(card=>{
     const rect = card.getBoundingClientRect();
     const x = e.clientX - rect.left;
     const y = e.clientY - rect.top;
-    const rotateY = ((x / rect.width)-0.5)*15;
-    const rotateX = ((y / rect.height)-0.5)*-15;
+    const rotateY = ((x / rect.width) - 0.5) * 15;
+    const rotateX = ((y / rect.height) - 0.5) * -15;
     card.style.setProperty('--rotateY', rotateY + 'deg');
     card.style.setProperty('--rotateX', rotateX + 'deg');
   });
-  card.addEventListener('mouseleave', ()=>{card.style.setProperty('--rotateY','0deg'); card.style.setProperty('--rotateX','0deg');});
+  card.addEventListener('mouseleave', ()=>{
+    card.style.setProperty('--rotateY','0deg');
+    card.style.setProperty('--rotateX','0deg');
+  });
 });
 
-// Scroll animation
+// Scroll animation for cards
 const observer = new IntersectionObserver(entries=>{
   entries.forEach(entry=>{
     if(entry.isIntersecting) entry.target.classList.add('visible');
